Include sys/types.h before sasl.h to fix build against Cyrus-SASL 2.1.26

A known bug in that specific version of Cyrus-SASL. This has been fixed
in later versions, but there's no harm in including sys/types.h ourselves
to make this version work.

BUG: 373799
FIXED-IN: 5.4.1